--- a/node/src/views/login.ejs
+++ b/node/src/views/login.ejs
@@ -10,7 +10,7 @@
 <body>
     <%-include('partials/navigation')%>
 
-    <h1>Este es gin</h1>
+    <h1>Este es gin ebra</h1>
     <%-include('partials/footer')%>
 </body>
 </html>
