--- a/node/src/views/partials/navigation.ejs
+++ b/node/src/views/partials/navigation.ejs
@@ -1,27 +1,19 @@
-<nav class="navbar navbar-dark bg-dark fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Offcanvas dark navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-        <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
-          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-            <li class="nav-item">
+<div class="collapse" id="navbarToggleExternalContent">
+  <div class="bg-dark p-4">
+    <h5 class="text-white h4">Dark offcanvas</h5>
+    <div >
+      <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="text-muted">
               <a class="nav-link active" aria-current="page" href="/">Inicio</a>
             </li>
-            <li class="nav-item">
+            <li class="text-muted">
               <a class="nav-link active" aria-current="page" href="/registro">Registro</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/login">Login</a>
+            <li class="text-muted">
+              <a class="nav-link active" aria-current="page" href="/login">Login</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/crud">Crud</a>    
+            <li class="text-muted">
+              <a class="nav-link active" aria-current="page" href="/crud">Crud</a>    
             </li>
           </ul>
           <form class="d-flex mt-3" role="search">
@@ -31,4 +23,11 @@
         </div>
       </div>
     </div>
-  </nav>
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="container-fluid">
+        <h5 class="text-white h4">Offcanvas dark navbar</h5>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  </div>
+</nav>
