--- a/node/src/views/login.ejs
+++ b/node/src/views/login.ejs
@@ -11,6 +11,8 @@
     <%-include('partials/navigation')%>
 
     <h1>Este es gin ebra</h1>
+    <%-include('partials/login')%>
+
     <%-include('partials/footer')%>
 </body>
 </html>
