--- a/node/src/public/main.css
+++ b/node/src/public/main.css
@@ -1,7 +1,6 @@
-body{
-    background: gray;
-    color: white;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+body {
+  align-items: center;
+  background-color: #ebe6e6 !important;
 }
 
 #y{
@@ -80,4 +79,26 @@ body{
   text-align: center;
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
+}
+
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+  padding-top: 65px;
+}
+
+.form-signin .form-floating:focus-within {
+  z-index: 2;
+}
+
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
