--- a/node/src/views/partials/login.ejs
+++ b/node/src/views/partials/login.ejs
@@ -15,7 +15,7 @@
 
 <main class="form-signin w-100 m-auto">
 <form>
-  <img class="mb-4" src="" alt="" width="90" height="90">
+  <img class="mb-4" src="img/mono.jpg" width="90" height="90">
   <h1 class="h3 mb-3 fw-normal">Iniciar Sesion</h1>
 
   <div class="form-floating">
