--- a/node/src/views/partials/navigation.ejs
+++ b/node/src/views/partials/navigation.ejs
@@ -1,5 +1,5 @@
 <div class="collapse" id="navbarToggleExternalContent">
-  <div class="bg-dark p-4">
+  <div class="bg-dark p-4" id="centro">
     <h5 class="text-white h4">Dark offcanvas</h5>
     <div >
       <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
