--- a/node/src/views/index.ejs
+++ b/node/src/views/index.ejs
@@ -10,7 +10,12 @@
 <body>
     <%-include('partials/navigation')%>
 
-    <h1>Este es mi Home</h1>
+    <h1 id="y">TechNotices</h1>
+    <img id="imagen" width="400" height="300" src="img/padoru.jpg">
+    <h4 id="u">Estas son las noticias más recientes : </h4> 
+    <br>
+    <h5>NVIDIA GeForce RTX 4080, análisis: este monstruo gráfico tiene la receta para triturar juegos a 4K con 'ray tracing'</h5>
+    
     
     <%-include('partials/footer')%>
 </body>
