--- a/node/src/public/main.css
+++ b/node/src/public/main.css
@@ -1,34 +1,38 @@
 body {
-  align-items: center;
   background-color: #ebe6e6 !important;
 }
 
-#y{
-    text-align: center;
-    margin-bottom: 3%;
+/*pagina inicio*/
+.caja {
+  margin: 0 10%;
+}
+
+#T_articulo {
+  margin-bottom: 0.5%;
+}
+
+#imagen {
+  margin-top: 20%;
+  margin: auto;
+  display: block;
+  transition: transform .2s;
+  border: 2px outset purple;
+  border-radius: 45px;
 
 }
 
-
-
-#imagen{
-    margin-top: 20%;
-        margin: auto;
-        display: block;
-        transition: transform .2s;
-        border: 2px outset purple;
-        border-radius: 45px;
-
-}
-#imagen:hover{
-    transform: scale(1.2);
+#imagen:hover {
+  transform: scale(1.2);
 }
 
-#u{
-    margin-top: 3%;
-    color: black;
-    text-align: center;
+#Titulo {
+  margin-top: 2.5%;
+  color: black;
+  text-align: center;
 }
+
+/*pagina login*/
+
 
 .bd-placeholder-img {
   font-size: 1.125rem;
@@ -102,3 +106,56 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+/*Footer*/
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
+
+.b-example-divider {
+  height: 3rem;
+  background-color: rgba(0, 0, 0, .1);
+  border: solid rgba(0, 0, 0, .15);
+  border-width: 1px 0;
+  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+}
+
+.b-example-vr {
+  flex-shrink: 0;
+  width: 1.5rem;
+  height: 100vh;
+}
+
+.bi {
+  vertical-align: -.125em;
+  fill: currentColor;
+}
+
+.nav-scroller {
+  position: relative;
+  z-index: 2;
+  height: 2.75rem;
+  overflow-y: hidden;
+}
+
+.nav-scroller .nav {
+  display: flex;
+  flex-wrap: nowrap;
+  padding-bottom: 1rem;
+  margin-top: -1px;
+  overflow-x: auto;
+  text-align: center;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
+}
+
