--- a/node/src/views/Registro.ejs
+++ b/node/src/views/Registro.ejs
@@ -7,7 +7,7 @@
     <%-include('partials/head')%>
     <title><%=title%></title>
 </head>
-<body>
+<body class="text-center">
     <%-include('partials/navigation')%>
     <h1>Registro de usuario</h1>
     <%-include('partials/footer')%>
