--- a/node/src/views/crud.ejs
+++ b/node/src/views/crud.ejs
@@ -7,7 +7,7 @@
     <%-include('partials/head')%>
     <title><%=title%></title>
 </head>
-<body>
+<body class="text-center">
     <%-include('partials/navigation')%>
     <h1>CRUD de usuarios</h1>
     <%-include('partials/footer')%>
