--- a/node/src/views/index.ejs
+++ b/node/src/views/index.ejs
@@ -7,15 +7,17 @@
     <%-include('partials/head')%>
     <title><%=title%></title>
 </head>
-<body>
+<body class="text-center">
     <%-include('partials/navigation')%>
-
-    <h1 id="y">TechNotices</h1>
-    <img id="imagen" width="400" height="300" src="img/padoru.jpg">
-    <h4 id="u">Estas son las noticias más recientes : </h4> 
     <br>
-    <h5>NVIDIA GeForce RTX 4080, análisis: este monstruo gráfico tiene la receta para triturar juegos a 4K con 'ray tracing'</h5>
-    
+    <br>
+    <img id="imagen" width="400" height="300" src="img/padoru.jpg">
+    <h4 id="Titulo">Estas son las noticias más recientes : </h4> 
+    <br>
+    <div class="caja">
+        <h5 id="T_articulo">NVIDIA GeForce RTX 4080, análisis: este monstruo gráfico tiene la receta para triturar juegos a 4K con 'ray tracing'</h5>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum voluptate sed consequatur esse nam veniam quasi modi tempore ducimus reiciendis laboriosam obcaecati nisi ullam, ab necessitatibus, eaque assumenda officia dolorum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quas praesentium rem similique ab voluptates corrupti dignissimos aperiam consequuntur fugiat repellendus possimus molestias, maxime voluptas placeat nesciunt at blanditiis ducimus?</p>
+    </div>
     
     <%-include('partials/footer')%>
 </body>
