--- a/node/src/views/partials/navigation.ejs
+++ b/node/src/views/partials/navigation.ejs
@@ -1,32 +1,35 @@
-<div class="collapse" id="navbarToggleExternalContent">
-  <div class="bg-dark p-4" id="centro">
-    <h5 class="text-white h4">Dark offcanvas</h5>
-    <div >
-      <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-            <li class="text-muted">
-              <a class="nav-link active" aria-current="page" href="/">Inicio</a>
-            </li>
-            <li class="text-muted">
-              <a class="nav-link active" aria-current="page" href="/registro">Registro</a>
-            </li>
-            <li class="text-muted">
-              <a class="nav-link active" aria-current="page" href="/login">Login</a>
-            </li>
-            <li class="text-muted">
-              <a class="nav-link active" aria-current="page" href="/crud">Crud</a>    
-            </li>
-          </ul>
-          <form class="d-flex mt-3" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-success" type="submit">Search</button>
-          </form>
-        </div>
+<div id="centro">
+  <div class="collapse" id="navbarToggleExternalContent">
+    <div class="bg-dark p-4">
+      <h5 class="text-white h4">Índice</h5>
+      <div>
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <li class="text-muted">
+            <a class="nav-link active" aria-current="page" href="/">Inicio</a>
+          </li>
+          <li class="text-muted">
+            <a class="nav-link active" aria-current="page" href="/registro">Registro</a>
+          </li>
+          <li class="text-muted">
+            <a class="nav-link active" aria-current="page" href="/login">Login</a>
+          </li>
+          <li class="text-muted">
+            <a class="nav-link active" aria-current="page" href="/crud">Crud</a>
+          </li>
+        </ul>
+        <form class="d-flex mt-3" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-success" type="submit">Search</button>
+        </form>
       </div>
     </div>
-    <nav class="navbar navbar-dark bg-dark">
-      <div class="container-fluid">
-        <h5 class="text-white h4">Offcanvas dark navbar</h5>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+  </div>
+</div>
+<nav class="navbar navbar-dark bg-dark">
+  <div class="container-fluid">
+    <h5 class="text-white h4">TechNotices</h5>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent"
+      aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   </div>
