--- a/node/src/views/partials/head.ejs
+++ b/node/src/views/partials/head.ejs
@@ -1,4 +1,5 @@
 <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/sign-in/">
+<link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/footers/">
 <link rel="stylesheet" href="/main.css">
 <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
