--- a/node/src/views/index.ejs
+++ b/node/src/views/index.ejs
@@ -11,12 +11,54 @@
     <%-include('partials/navigation')%>
     <br>
     <br>
-    <img id="imagen" width="400" height="300" src="img/padoru.jpg">
-    <h4 id="Titulo">Estas son las noticias más recientes : </h4> 
-    <br>
+    <a href="/" >
+        <img id="imagen2" src="/img/logoletra.png" width="250" height="200">
+      </a>
+    <h3 id="Titulo">Estas son las noticias más recientes : </h4> 
     <div class="caja">
-        <h5 id="T_articulo">NVIDIA GeForce RTX 4080, análisis: este monstruo gráfico tiene la receta para triturar juegos a 4K con 'ray tracing'</h5>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum voluptate sed consequatur esse nam veniam quasi modi tempore ducimus reiciendis laboriosam obcaecati nisi ullam, ab necessitatibus, eaque assumenda officia dolorum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quas praesentium rem similique ab voluptates corrupti dignissimos aperiam consequuntur fugiat repellendus possimus molestias, maxime voluptas placeat nesciunt at blanditiis ducimus?</p>
+        <h4 id="T_articulo">NVIDIA GeForce RTX 4080, análisis: este monstruo gráfico tiene la receta para triturar juegos a 4K con 'ray tracing'</h4>
+        <p>
+            La tarjeta gráfica más ambiciosa que tiene NVIDIA actualmente ha puesto el listón muy alto. 
+            Durante nuestras pruebas la GeForce RTX 4090 nos demostró que es un auténtico monstruo dimensionado 
+            para entregarnos un rendimiento muy alto en cualquier escenario de uso. Incluso a 2160p, 
+            con la máxima calidad gráfica y el trazado de rayos activado.
+        </p>
+        <p class="espacio">
+            El hándicap más evidente de esta solución gráfica es su precio. 
+            Y es que los más de 2000 euros que tenemos que pagar los usuarios para hacernos con ella la colocan 
+            definitivamente fuera del alcance de la mayor parte de los jugones. La protagonista de este análisis, 
+            la GeForce RTX 4080, tiene el mismo ADN de la RTX 4090. Sus especificaciones son un poco menos ambiciosa
+            s, pero, a cambio, tiene un precio algo más moderado.
+        </p>
+        <img id="imagen" width="400" height="300" src="img/grafica.jpg">
+        <h4 id="T_articulo">Apple permitirá descargar aplicaciones que no sean de su tienda oficial</h4>
+        <p>
+            La compañía estudia dejar de controlar y cobrar en 2024 por todo lo que se instale en los iPhones 
+            y iPads para adaptarse a la normativa europea.
+        </p>
+        <p class="espacio">
+            El férreo control que ejerce Apple sobre las aplicaciones que se descargan en sus dispositivos 
+            puede llegar pronto a su fin. La compañía de Cupertino se prepara para dejar que pueda haber otras 
+            tiendas de apps en sus teléfonos y tabletas, según avanzó Bloomberg. Esta medida, que solo afectaría 
+            a Europa, permitiría que los usuarios puedan descargarse aplicaciones de terceros, no controladas 
+            por Apple, y que los desarrolladores dejen de tener que pagar las comisiones de hasta el 30% que 
+            impone la empresa de la manzana. Fuentes de la compañía consultadas por EL PAÍS señalan que, por el
+            momento, no tienen nada que comentar al respecto.
+        </p>
+        <p>
+            La decisión no parte de un giro estratégico voluntario. Apple debe tomar medidas para adaptarse a las 
+            nuevas normativas europeas aprobadas este año que afectan a la actividad de las grandes tecnológicas y 
+            que entrarán en vigor en 2024. El Reglamento de Servicios Digitales (DSA) les obliga a cumplir una serie 
+            de requisitos técnicos, como abrir sus algoritmos y someterlos a auditorías para comprobar que no se 
+            discrimine a ningún colectivo o retirar rápidamente los contenidos ilegales que se difundan a través de 
+            ellas. El Reglamento de Mercados Digitales (DMA), por su parte, tiene como objetivo acabar con los 
+            monopolios de las big tech. Esta última está especialmente diseñada para que siete grandes compañías 
+            (Meta, Amazon, Alphabet, matriz de Google, Apple, Microsoft, Alibaba y SAS) pierdan la capacidad de manejar
+             el mercado a su antojo. La intención es que Amazon no estrangule el comercio electrónico, Google no 
+             favorezca en su buscador sus propios productos o que Android y Apple no sean los guardianes del software 
+             de los móviles.
+        </p>
+        <img id="imagen" width="400" height="300" src="img/apple.jpg">
     </div>
     
     <%-include('partials/footer')%>
