--- a/node/src/views/login.ejs
+++ b/node/src/views/login.ejs
@@ -25,7 +25,10 @@
       
       <main class="form-signin w-100 m-auto">
       <form>
-        <img class="mb-4" src="img/mono.jpg" width="90" height="90">
+        <a href="/" id="espacios">
+          <img id="imagen2" src="/img/logoletra.png" width="250" height=200">
+        </a>
+        <br>
         <h1 class="h3 mb-3 fw-normal">Iniciar Sesion</h1>
       
         <div class="form-floating">
@@ -42,7 +45,7 @@
             <input type="checkbox" value="remember-me"> recuerdame
           </label>
         </div>
-        <a href="index.html" class="w-100 btn btn-lg btn-primary" type="submit" >Iniciar Sesion</a>
+        <a href="/" class="w-100 btn btn-lg btn-primary" type="submit" >Iniciar Sesion</a>
         <p>¿No tienes cuenta? <a href="/Registro">registrate</a></p>
         <h2 class="fs-5 fw-bold mb-3">O usa una tercera opción</h2>
               <a href="https://twitter.com/" class="w-100 py-2 mb-2 btn btn-outline-dark rounded-3" type="submit">
