--- a/node/src/views/Registro.ejs
+++ b/node/src/views/Registro.ejs
@@ -9,7 +9,50 @@
 </head>
 <body class="text-center">
     <%-include('partials/navigation')%>
-    <h1>Registro de usuario</h1>
+    <br>
+    <br>
+    <a href="/">
+        <img id="imagen2" src="/img/logoletra.png" width="250" height=200">
+      </a>
+    <div class="container">
+            <section>
+                <br>
+                <h1 class="h3 mb-3 fw-normal">Formulario de Registro</h1>
+            <div class="form-floating">
+                <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com" size="30" required>
+                <label for="floatingInput">Ingrese su nombre...</label>
+              </div>
+              <br>
+              <div class="form-floating">
+                  <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com" size="70" required>
+                  <label for="floatingInput">Ingrese sus apellidos...</label>
+                </div>
+                <br>
+                <div class="form-floating">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com"  size="80" required>
+                    <label for="floatingInput">Ingrese su correo...</label>
+                </div>
+                <br>
+                <div class="form-floating">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" size="30"  required>
+                    <label for="floatingInput">Ingrese su nickname...</label>
+                </div>
+                <br>
+                <div class="form-floating">
+                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password" size="30" required>
+                    <label for="floatingPassword">Ingrese su contraseña...</label>
+                </div>
+                <br>
+              <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" size="30" required>
+                <label for="floatingPassword"> Repita contraseña.</label>
+              </div>
+               <hr>
+                <a href="/login" class="w-100 btn btn-lg btn-primary" type="submit" >Registrarse</a>
+            </section>
+        </div>
+       
+    </div>
     <%-include('partials/footer')%>
 
 </body>
