--- a/node/src/views/crud.ejs
+++ b/node/src/views/crud.ejs
@@ -9,7 +9,49 @@
 </head>
 <body class="text-center">
     <%-include('partials/navigation')%>
-    <h1>CRUD de usuarios</h1>
+    <br>
+    <br>
+    <a href="/">
+        <img id="imagen2" src="/img/logoletra.png" width="250" height=200">
+      </a>
+      <div class="container">
+        <div class="row mt-4">
+          <div class="col-lg-12 d-flex justify-content-between align-items-center">
+            <div>
+              <h4 class="text-primary">¡Todos los usuarios en la BBDD!</h4>
+            </div>
+            <div>
+                <a href="/Registro" class="w-100 btn btn-lg btn-primary" type="submit" >Nuevo Usuario</a>
+            </div>
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-lg-12">
+            <div id="showAlert"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="table-responsive">
+              <table class="table table-striped table-bordered text-center">
+                <thead>
+                  <tr>
+                    <th>Nombre</th>
+                    <th>Apellidos</th>
+                    <th>Correo electrónico</th>
+                    <th>Usuario</th>
+                  </tr>
+                </thead>
+                <tbody>
+    
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+      <script src="main.js"></script>
     <%-include('partials/footer')%>
 </body>
 </html>
